--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,29 +11,7 @@
 
 	<link href="css/jquery-ui.css" rel="stylesheet">
 	<link href="css/bootstrap.css" rel="stylesheet">
-	<style type="text/css">
-		body {
-			padding-top: 20px;
-			padding-bottom: 20px;
-		}
-		#main-menu {
-			display: -webkit-flex;
-			display: -moz-flex;
-			display: -ms-flex;
-			display: -o-flex;
-			display: flex;
-			-webkit-justify-content: space-around;
-		}
-		.navbar-inner {
-			min-width: 95%;
-		}
-		.scroll {
-			width: 100%;
-			height: 250px;
-			overflow: scroll;
-			overflow-x: hidden;
-		}
-	</style>
+	<link href="css/app.css" rel="stylesheet">
 
 	<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 	<!--[if lt IE 9]>
