Adding i18n with support to change at runtime

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -56,6 +56,10 @@
 				<li><a href="#/tarefa/">{{'TASKS'|i18n}}</a></li>
 			</ul>
 			<a class="brand" ng-click="logout()">{{'LOGOUT'|i18n}}</a>
+			<ul class="nav pull-right">
+				<li><a ng-click="language('pt-BR')">{{'PORTUGUESE'|i18n}}</a></li>
+				<li><a ng-click="language('en-US')">{{'ENGLISH'|i18n}}</a></li>
+			</ul>
 		</div>
 	</div>
 	
