--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -72,6 +72,8 @@
 				<tr><td>{{'USERNAME'|i18n}}:</td><td><input id="user" type='text' name='user' /></td></tr>
 				<tr><td>{{'PASSWORD'|i18n}}:</td><td><input id="pass" type='password' name='pass' /></td></tr>
 			</table>
+			<hr/>
+			<p><b>Login</b>: admin <b>Password</b>: 123 <b>|</b> <b>Login</b>: user <b>Password</b>:123</p>
         </div>
         <div class="modal-footer"><button class="btn" ng-click="login()">Login</button></div>
 	</div>
