Removed jquery code and update with Angular way instead

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -27,6 +27,7 @@
 		</script>
     <![endif]-->
 
+	<script src="js/lib/compatibility/sprintf.js"></script>
 	<script src="js/lib/jquery/jquery-1.10.1.min.js"></script>
 	<script src="js/lib/jquery/jquery-migrate-1.2.1.min.js"></script>
 	<script src="js/lib/jquery/jquery-ui-1.7.3.min.js"></script>
