Update with ideal i18n lib

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -27,18 +27,19 @@
 		</script>
     <![endif]-->
 
+	<script src="js/app/base.js"></script>
+
 	<script src="js/lib/compatibility/sprintf.js"></script>
 	<script src="js/lib/jquery/jquery-1.10.1.min.js"></script>
 	<script src="js/lib/jquery/jquery-migrate-1.2.1.min.js"></script>
 	<script src="js/lib/jquery/jquery-ui-1.7.3.min.js"></script>
 	<script src="js/lib/bootstrap/bootstrap-2.3.2.min.js"></script>
-	<script src="js/lib/angular/angularjs-1.0.1.min.js"></script>
-	<script src="js/lib/angular/angular-resource-1.0.1.min.js"></script>
-	<script src="js/lib/angular/angular-localization.js"></script>
+	<script src="js/lib/angular/angularjs-1.1.4.min.js"></script>
+	<script src="js/lib/angular/angular-resource-1.1.4.min.js"></script>
+	<script src="js/lib/localization/localize.js"></script>
 	<script src="js/lib/angular/ui/ui-bootstrap-0.3.0.min.js"></script>
 	<script src="js/lib/angular/ui/date.js"></script>
 
-	<script src="js/app/base.js"></script>
 	<script src="js/app/services.js"></script>
 	<script src="js/app/masterControllers.js"></script>
 
@@ -68,8 +69,8 @@
 			</ul>
 			<a class="brand" ng-click="logout()">{{'LOGOUT'|i18n}}</a>
 			<ul class="nav pull-right">
-				<li><a ng-click="language('pt-BR')">{{'PORTUGUESE'|i18n}}</a></li>
-				<li><a ng-click="language('en-US')">{{'ENGLISH'|i18n}}</a></li>
+				<li><a ng-click="setLocale('pt-BR')">{{'PORTUGUESE'|i18n}}</a></li>
+				<li><a ng-click="setLocale('en-US')">{{'ENGLISH'|i18n}}</a></li>
 			</ul>
 		</div>
 	</div>
